[project]
name = "medium-annoyed-api"
version = "0.1.0"
description = "CLI experiment for publishing Markdown articles to Medium without integration tokens"
readme = "README.md"
authors = [
    { name = "Andre Faria", email = "andremarcalfaria@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "markdown-it-py>=4.2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
medium-annoyed-api = "medium_annoyed_api:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
